<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView android:id="@+id/mainMenuImage"
    	android:src="@drawable/mainmenu"  
    	android:layout_width="match_parent" 
    	android:layout_height="match_parent"
    	android:contentDescription="@string/mainmenu">
    </ImageView>
    <RelativeLayout
        android:id="@+id/buttonsbottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp">
        <ImageButton 
        	android:id="@+id/btnAbout" 
        	android:clickable="true"
        	android:layout_alignParentLeft="true"
        	android:layout_width="wrap_content" 
        	android:src="@drawable/aboutselector" 
        	android:layout_height="wrap_content"
			android:contentDescription="@string/mainaboutdes">
        </ImageButton>
    	<ImageButton 
    		android:id="@+id/btnExit"  
    		android:layout_width="wrap_content" 
    		android:src="@drawable/exitselector" 
    		android:layout_height="wrap_content" 
    		android:layout_alignParentRight="true"
    		android:clickable="true" 
    		android:contentDescription="@string/mainexitdes">
    	</ImageButton>    
    </RelativeLayout>    
    <RelativeLayout
        android:id="@+id/buttonstop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="310dp">
        <ImageButton 
        	android:id="@+id/btnStart" 
        	android:clickable="true"
        	android:layout_alignParentLeft="true"
        	android:layout_width="wrap_content" 
        	android:src="@drawable/startselector" 
        	android:layout_height="wrap_content" 
        	android:contentDescription="@string/mainstartdes">
        </ImageButton>
    	<ImageButton 
    		android:id="@+id/btnOptions"  
    		android:layout_width="wrap_content" 
    		android:src="@drawable/optionselector" 
    		android:layout_height="wrap_content" 
    		android:layout_alignParentRight="true"
    		android:clickable="true" 
    		android:contentDescription="@string/mainoptionsdes">
    	</ImageButton>    
    </RelativeLayout>    
   </RelativeLayout>
