<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/aboutBkgImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/AboutBkgImg"
        android:src="@drawable/mainmenu" >
    </ImageView>

    <RelativeLayout
        android:id="@+id/backBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            android:contentDescription="@string/AboutBackImg"
            android:src="@drawable/backselector" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/btnYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="80dp"
        android:layout_marginTop="148dp"
        android:clickable="true"
        android:contentDescription="@string/ButtonImg"
        android:src="@drawable/yesselector" />

    <ImageButton
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="80dp"
        android:clickable="true"
        android:contentDescription="@string/ButtonImg"
        android:src="@drawable/noselector" />

</RelativeLayout>
